--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title><%= yield(:title) %> | GolfStore</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %> 
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
@@ -15,7 +15,16 @@
            <%= yield %>
       </div>
       <div id='first-column'>
-        <div class="loginbox">
+        <div class="loginbox" style=" height:300px ">
+          <% if user_signed_in? %>
+            
+            <div>Signed in as... <%= current_user.email %> (<%= link_to 'Sign out', destroy_user_session_path, :method => :delete %>)</div>
+            
+            <% else %>
+            
+            <%= link_to 'Register', new_user_registration_path %> or <%= link_to 'Sign in', new_user_session_path %>
+            
+          <% end %>
           <h2 class="BoxHeaders">Login here...</h2>
         </div>
       
